# vareffect

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  optimizations.md
.github/workflows/: ci.yml  release.yml
vareffect/: Cargo.toml  README.md  VEP_DIVERGENCES.md
vareffect-cli/: Cargo.toml  README.md  vareffect_build.toml
vareffect-cli/src/: annotate.rs  check.rs  common.rs  config.rs  csq.rs  init.rs  main.rs  setup.rs  vcf.rs
vareffect-cli/src/builders/: mod.rs  patch_chrom_aliases.rs  reference_genome.rs
vareffect-cli/src/builders/transcript_models/: cross_validate.rs  gff3_attrs.rs  mod.rs
vareffect-cli/src/builders/transcript_models/cross_validate/: mane_summary.rs  mod.rs  ucsc_refseq.rs
vareffect/scripts/: generate_vep_ground_truth.py
vareffect/src/: chrom.rs  codon.rs  error.rs  fasta.rs  hgvs_c.rs  hgvs_p.rs  hgvs_reverse.rs  lib.rs  normalize.rs  test_fixtures.rs  transcript.rs  types.rs  var_effect.rs  vep_json.rs
vareffect/src/consequence/: complex.rs  helpers.rs  indel.rs  mod.rs  nmd.rs  snv.rs  tests.rs
vareffect/src/locate/: helpers.rs  indel.rs  mod.rs  tests.rs
vareffect/src/vrs/: digest.rs  mod.rs  normalize.rs  serialize.rs  sq_digest.rs
vareffect/tests/: anchor_prepend_indel_tests.rs  fasta_tests.rs  grch37_clinvar_concordance.rs  grch37_smoke.rs  left_align_tests.rs  locate_tests.rs  vep_concordance_grch37_snv.rs  vep_concordance_grch38_hgvs.rs  vep_concordance_grch38_hgvs_p.rs  vep_concordance_grch38_hgvs_reverse.rs  vep_concordance_grch38_indel.rs  vep_concordance_grch38_normalization.rs  vep_concordance_grch38_snv.rs  vep_concordance_hgvs.rs  vep_concordance_hgvs_p.rs  vep_concordance_hgvs_reverse.rs  vep_concordance_indel.rs  vep_concordance_normalization.rs  vep_concordance_snv.rs  vep_large_concordance.rs  vep_large_concordance_grch37.rs  vep_large_concordance_grch38.rs  vrs_ground_truth.rs
vareffect/tests/data/: clinvar_grch37_grch38_pairs.tsv  store_accessions.txt  vep_ground_truth_grch37.tsv
