[package]
name = "vareffect"
version.workspace = true
edition.workspace = true
description = "Variant consequence prediction and HGVS notation, concordant with Ensembl VEP."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/LIA-Genomics/vareffect"
homepage = "https://lia-genomics.com"
documentation = "https://docs.rs/vareffect"
keywords = ["bioinformatics", "genomics", "vep", "hgvs", "variant"]
categories = ["science::bioinformatics"]

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc"
]

[dependencies]
base64        = { workspace = true }
coitrees      = { workspace = true }
memmap2       = { workspace = true }
rayon         = { workspace = true }
rmp-serde     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
thiserror     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
